# gitlab_mcp

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gitlab_mcp/: __init__.py  __main__.py  client.py  server.py
src/gitlab_mcp/tools/: __init__.py  _util.py  generic.py  issues.py  merge_requests.py  misc.py  pipelines.py  projects.py  repository.py
