[project]
name = "gitlab-mcp"
version = "0.1.0"
description = "A Model Context Protocol server exposing the full GitLab REST API, authenticated with a personal access token."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
gitlab-mcp = "gitlab_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gitlab_mcp"]
